--- a/package.json
+++ b/package.json
@@ -1,1 +1,5 @@
-{"name": "auction-site","version": "1.0.0"}
+"scripts": {
+  "dev": "next dev",
+  "build": "next build",
+  "start": "next start"
+}
